manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: homer-config
              mountPath: /www/assets/config.yml
              subPath: config.yml
            - name: homer-assets
              mountPath: /www/assets/logos
              # everything in homer-assets ConfigMap will appear here
      volumes:
        - name: homer-config
          configMap:
            name: homer-config
        - name: homer-assets
          configMap:
            name: homer-assets
